Fix nav bar spacing

--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -23,7 +23,6 @@ h1 {
 }
 
 .nav-container{
-  padding-bottom: -1px;
   overflow: hidden;
   background-color: #ef8354;
   position: sticky;
@@ -124,7 +123,7 @@ h1 {
   padding-right: 20px;
 }
 
-#logged-in-message {
+.logged-in-message {
   color: #293241ff;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
